--- a/SOLIDPrinciplesLab/SOLIDPrinciplesLab/Views/OCP/Index.cshtml
+++ b/SOLIDPrinciplesLab/SOLIDPrinciplesLab/Views/OCP/Index.cshtml
@@ -11,5 +11,10 @@
 
         <input type="button" title="NO OCP" value="NO OCP" onclick="location.href='@Url.Action("MyAction", "MyController")'" />
         <input type="button" title="OCP" value="OCP" onclick="location.href='@Url.Action("OCPData", "OCPData")'" />
+
+        <input type="button" title="NO LSP" value="NO LSP" onclick="location.href='@Url.Action("OCPData", "LSPData")'" />
+        <input type="button" title="LSP" value="LSP" onclick="location.href='@Url.Action("OCPData", "LSPData")'" />
+
+        <input type="button" title="DIP" value="DIP" onclick="location.href='@Url.Action("OCPData", "DIPData")'" />
 </div>
 </div>
